[gd_scene load_steps=6 format=2]

[ext_resource path="res://gameplay/node_deletion_menu/confirm.png" type="Texture" id=1]
[ext_resource path="res://gameplay/node_deletion_menu/cancel.png" type="Texture" id=2]
[ext_resource path="res://gameplay/node_deletion_menu/buttons_container.gd" type="Script" id=3]
[ext_resource path="res://fonts/Ubuntu-B.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 4 )

[node name="vbox_container" type="VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="."]
margin_right = 139.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
text = "Remove?"

[node name="hbox_container" type="HBoxContainer" parent="."]
margin_top = 41.0
margin_right = 139.0
margin_bottom = 105.0

[node name="remove_button" type="TextureButton" parent="hbox_container"]
margin_right = 64.0
margin_bottom = 64.0
texture_normal = ExtResource( 1 )

[node name="cancel_button" type="TextureButton" parent="hbox_container"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
texture_normal = ExtResource( 2 )

[node name="position" type="Position2D" parent="."]
[connection signal="pressed" from="hbox_container/remove_button" to="." method="_on_remove_button_pressed"]
[connection signal="pressed" from="hbox_container/cancel_button" to="." method="_on_cancel_button_pressed"]
